deploy/kubectl/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-wiki
  namespace: jason-lab
  labels:
    app: golang-wiki
spec:
  ports:
  - port: 4000
    name: http
    targetPort: 8082
  selector:
    app: golang-wiki
