deploy/kubectl/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: golang-wiki
  namespace: jason-lab
spec:
  tls:
  - hosts:
    - skaffold-production.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: skaffold-production.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: golang-wiki
          servicePort: 8082
